k8s/base/postgres.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: messager

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - system

      containers:
        - name: postgres

          image: postgres:16-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $POSTGRES_USER

            initialDelaySeconds: 10
            periodSeconds: 5

          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"

            limits:
              cpu: "500m"
              memory: "1Gi"

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: messager

spec:
  selector:
    app: postgres

  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
