k8s/base/user-service.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-service
  namespace: messager

spec:
  replicas: 1

  selector:
    matchLabels:
      app: user-service

  template:
    metadata:
      labels:
        app: user-service

    spec:

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: workload
                    operator: In
                    values:
                      - app

      containers:
        - name: user-service

          image: mablinov2704/user-service:latest

          ports:
            - containerPort: 8081

          resources:
            requests:
              cpu: "150m"
              memory: "192Mi"

            limits:
              cpu: "300m"
              memory: "384Mi"

---
apiVersion: v1
kind: Service

metadata:
  name: user-service
  namespace: messager

spec:
  selector:
    app: user-service

  ports:
    - name: http
      port: 8081
      targetPort: 8081
