k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messager-ingress
  namespace: messager
spec:
  ingressClassName: nginx
  rules:
    - host: messager.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: bff
                port:
                  number: 8080
